--- a/about.html
+++ b/about.html
@@ -193,13 +193,13 @@
 
             <div class="health-about__hero-gallery pb-60">
               <div class="health-about__hero-item cf_image has_fade_anim" data-fade-from="left" data-delay="0.5">
-                <img src="../assets/imgs/health/inner/1.jpg" alt="Thumbnail">
+                <img src="assets/img" alt="Thumbnail">
               </div>
               <div class="health-about__hero-item cf_image has_fade_anim" data-fade-from="left" data-delay="0.65">
-                <img src="../assets/imgs/health/inner/2.jpg" alt="Thumbnail">
+                <img src="assets/img/" alt="Thumbnail">
               </div>
               <div class="health-about__hero-item cf_image has_fade_anim" data-fade-from="left" data-delay="0.8">
-                <img src="../assets/imgs/health/inner/3.jpg" alt="Thumbnail">
+                <img src="assets/img/" alt="Thumbnail">
               </div>
               <div class="health-about__hero-item cf_image has_fade_anim" data-fade-from="left" data-delay="0.95">
                 <img src="../assets/imgs/health/inner/4.jpg" alt="Thumbnail">
@@ -213,13 +213,13 @@
                   trust no one and sometimes so better.</p>
               </div>
               <div class="cf_image">
-                <img src="../assets/imgs/motivational-speaker/signiture.png" alt="Signiture">
+                <img src="assets/img/signature.png" alt="Signiture">
               </div>
             </div>
           </div>
 
           <div class="cf_image health-about__hero-leaf">
-            <img src="../assets/imgs/health/leaf.png" alt="Leaf">
+            <img src="assets/img/bowl.png" alt="Leaf" width="200">
           </div>
         </section>
         <!-- Hero section end -->
@@ -230,58 +230,65 @@
 
           <div class="health__textslider has_fade_anim">
             <div class="swiper text__slider" data-sliderSpeed="20000" data-autoPlay="true">
-              <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                  <div class="text-slide-content">
-                    <h2 class="title">content</h2>
-                    <img src="../assets/imgs/health/shape-3.png" alt="Icon">
-                  </div>
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="text-slide-content">
+                            <h2 class="title">Personalized Nutrition Plans</h2>
+                            <img src="assets/img/meal.svg" alt="Icon" width="32">
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="text-slide-content">
+                            <h3 class="title">Health Advisor & Wellness Coach</h3>
+                                                        <img src="assets/img/meal.svg" alt="Icon" width="32">
+
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="text-slide-content">
+                            <h2 class="title">Nutritional Insights</h2>
+                                                        <img src="assets/img/meal.svg" alt="Icon" width="32">
+
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="text-slide-content">
+                            <h2 class="title">Healthy Lifestyle Guidance</h2>
+                                                        <img src="assets/img/meal.svg" alt="Icon" width="32">
+
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="text-slide-content">
+                            <h2 class="title">Weight Management</h2>
+                                                        <img src="assets/img/meal.svg" alt="Icon" width="32">
+
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="text-slide-content">
+                            <h2 class="title">Holistic Wellness</h2>
+                                                        <img src="assets/img/meal.svg" alt="Icon" width="32">
+
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="text-slide-content">
+                            <h2 class="title">Nutritional Research & Education</h2>
+                                                        <img src="assets/img/meal.svg" alt="Icon" width="32">
+
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="text-slide-content">
+                            <h2 class="title">Meal Planning Expertise</h2>
+                                                        <img src="assets/img/meal.svg" alt="Icon" width="32">
+
+                        </div>
+                    </div>
                 </div>
-                <div class="swiper-slide">
-                  <div class="text-slide-content">
-                    <h3 class="title">(Health Advisor & Coach)</h3>
-                    <img src="../assets/imgs/health/shape-3.png" alt="Icon">
-                  </div>
-                </div>
-                <div class="swiper-slide">
-                  <div class="text-slide-content">
-                    <h2 class="title">News</h2>
-                    <img src="../assets/imgs/health/shape-3.png" alt="Icon">
-                  </div>
-                </div>
-                <div class="swiper-slide">
-                  <div class="text-slide-content">
-                    <h2 class="title">creative director</h2>
-                    <img src="../assets/imgs/health/shape-3.png" alt="Icon">
-                  </div>
-                </div>
-                <div class="swiper-slide">
-                  <div class="text-slide-content">
-                    <h2 class="title">creative director</h2>
-                    <img src="../assets/imgs/health/shape-3.png" alt="Icon">
-                  </div>
-                </div>
-                <div class="swiper-slide">
-                  <div class="text-slide-content">
-                    <h2 class="title">creative director</h2>
-                    <img src="../assets/imgs/health/shape-3.png" alt="Icon">
-                  </div>
-                </div>
-                <div class="swiper-slide">
-                  <div class="text-slide-content">
-                    <h2 class="title">Research</h2>
-                    <img src="../assets/imgs/health/shape-3.png" alt="Icon">
-                  </div>
-                </div>
-                <div class="swiper-slide">
-                  <div class="text-slide-content">
-                    <h2 class="title">creative director</h2>
-                    <img src="../assets/imgs/health/shape-3.png" alt="Icon">
-                  </div>
-                </div>
-              </div>
             </div>
-          </div>
+        </div>
         </div>
         <!-- Text Slider area end -->
 
@@ -292,42 +299,46 @@
             <div class="health-choose__inner">
               <div class="health-choose__grid">
                 <div class="health-choose__item cf_iconbox has_fade_anim" data-fade-from="left" data-delay="0.5">
-                  <div class="cf_image mb-40">
-                    <img src="../assets/imgs/health/choose.png" alt="Icon">
-                  </div>
-                  <h3 class="health-choose__title">Health <br> Awareness </h3>
-                  <div class="cf_text health-choose__text pt-30">
-                    <p>Manage your weight or reverse type 2 diabetes for less than day to keep health better.</p>
+                  <div class="wcf__iconbox style-3">
+                    <div class="icon">
+                      <img src="assets/img/healthcare.png" alt="Icon" width="90">
+                    </div>
+                    <h2 class="title">Health <br> Awareness</h2>
+                    <p class="desc">I prioritize educating and empowering you to make informed decisions about your health. By focusing on awareness, I help you understand your body’s needs and guide you toward achieving long-term well-being through balanced and sustainable nutrition.
+                    </p>
                   </div>
                 </div>
 
                 <div class="health-choose__item cf_iconbox has_fade_anim" data-fade-from="left" data-delay="0.65">
-                  <div class="cf_image mb-40">
-                    <img src="../assets/imgs/health/choose-2.png" alt="Icon">
-                  </div>
-                  <h3 class="health-choose__title">Nutrition <br> Routine</h3>
-                  <div class="cf_text health-choose__text pt-30">
-                    <p>Manage your weight or reverse type 2 diabetes for less than day to keep health better.</p>
+                  <div class="wcf__iconbox style-3">
+                    <div class="icon">
+                      <img src="assets/img/fitness.png" alt="Icon" width="90">
+                    </div>
+                    <h2 class="title">Nutrition <br> Routine</h2>
+                    <p class="desc">I focus on creating personalized nutrition routines that fit seamlessly into your lifestyle. By emphasizing balanced and sustainable habits, I help you achieve your health goals while ensuring long-term well-being and vitality.
+                    </p>
                   </div>
                 </div>
 
                 <div class="health-choose__item cf_iconbox has_fade_anim" data-fade-from="left" data-delay="0.8">
-                  <div class="cf_image mb-40">
-                    <img src="../assets/imgs/health/choose-3.png" alt="Icon">
-                  </div>
-                  <h3 class="health-choose__title">Individual <br> Support</h3>
-                  <div class="cf_text health-choose__text pt-30">
-                    <p>Manage your weight or reverse type 2 diabetes for less than day to keep health better.</p>
+                  <div class="wcf__iconbox style-3">
+                    <div class="icon">
+                      <img src="assets/img/support.png" alt="Icon" width="90">
+                    </div>
+                    <h2 class="title">Individual <br> Support</h2>
+                    <p class="desc">I provide personalized guidance tailored to your unique health needs and goals. With dedicated one-on-one support, I ensure you stay motivated and empowered throughout your journey to better health.
+                    </p>
                   </div>
                 </div>
 
                 <div class="health-choose__item cf_iconbox has_fade_anim" data-fade-from="left" data-delay="0.95">
-                  <div class="cf_image mb-40">
-                    <img src="../assets/imgs/health/choose-4.png" alt="Icon">
-                  </div>
-                  <h3 class="health-choose__title">First-Hand <br> Advice</h3>
-                  <div class="cf_text health-choose__text pt-30">
-                    <p>Manage your weight or reverse type 2 diabetes for less than day to keep health better.</p>
+                  <div class="wcf__iconbox style-3">
+                    <div class="icon">
+                      <img src="assets/img/advice.svg" alt="Icon" width="90">
+                    </div>
+                    <h2 class="title">First-Hand <br> Advice</h2>
+                    <p class="desc">I offer practical, evidence-based advice rooted in professional expertise and real-world experience. My goal is to provide you with clear and actionable steps to make informed choices for a healthier lifestyle.
+                    </p>
                   </div>
                 </div>
               </div>
@@ -359,7 +370,7 @@
                     </div>
                   </div>
                   <div class="dancer__abouthow-thumb cf_image img_anim_reveal">
-                    <img src="../assets/imgs/health/inner/11.jpg" alt="how-thumb">
+                    <img src="assets/img/aswathi-dp.png" alt="how-thumb">
                   </div>
                 </div>
                 <div class="dancer__abouthow-item has_fade_anim" data-fade-from="left">
@@ -374,7 +385,7 @@
                     </div>
                   </div>
                   <div class="dancer__abouthow-thumb cf_image img_anim_reveal">
-                    <img src="../assets/imgs/health/inner/12.jpg" alt="how-thumb">
+                    <img src="assets/img/aswathi-dp.png" alt="how-thumb">
                   </div>
                 </div>
                 <div class="dancer__abouthow-item has_fade_anim" data-fade-from="right">
@@ -389,7 +400,7 @@
                     </div>
                   </div>
                   <div class="dancer__abouthow-thumb cf_image img_anim_reveal">
-                    <img src="../assets/imgs/health/inner/13.jpg" alt="how-thumb">
+                    <img src="assets/img/aswathi-dp.png" alt="how-thumb">
                   </div>
                 </div>
               </div>
@@ -397,7 +408,7 @@
           </div>
 
           <div class="cf_image health-about__story-shape">
-            <img src="../assets/imgs/health/leaf-9.png" alt="Shape">
+            <img src="assets/img/bowl-2.png" alt="Shape" width="150">
           </div>
         </section>
         <!-- How Work area end -->
@@ -408,105 +419,43 @@
         <section class="health-gallery__area pt-120 pb-140">
           <div class="health-gallery__inner">
             <div class="sec-title-wrap">
-              <h2 class="sec-title-17 has_text_reveal_anim">Shape of nature and <br> herbal teas!</h2>
+              <h2 class="sec-title-17 has_text_reveal_anim">Wellness Campaign For <br> IT Proffessionals</h2>
             </div>
 
             <div class="health-gallery__flex">
               <div class="health-gallery__item has_fade_anim" data-fade-from="left" data-delay="0.5">
                 <div class="cf_image">
-                  <img src="../assets/imgs/health/g1.png" alt="Thumbnail">
+                  <img src="assets/img/about-1.jpg" alt="Thumbnail">
                 </div>
-                <h3 class="health-gallery__title">Body Shape <br> Phase</h3>
               </div>
 
               <div class="health-gallery__item has_fade_anim" data-fade-from="left" data-delay="0.65">
                 <div class="cf_image">
-                  <img src="../assets/imgs/health/g2.png" alt="Thumbnail">
+                  <img src="assets/img/about-2.jpg" alt="Thumbnail">
                 </div>
-                <h3 class="health-gallery__title">Knee foot <br> down</h3>
               </div>
 
               <div class="health-gallery__item has_fade_anim" data-fade-from="left" data-delay="0.8">
                 <div class="cf_image">
-                  <img src="../assets/imgs/health/g3.png" alt="Thumbnail">
+                  <img src="assets/img/about-3.jpg" alt="Thumbnail">
                 </div>
-                <h3 class="health-gallery__title">Health bulk <br> Cased</h3>
               </div>
 
               <div class="health-gallery__item has_fade_anim" data-fade-from="left" data-delay="0.95">
                 <div class="cf_image">
-                  <img src="../assets/imgs/health/g4.png" alt="Thumbnail">
+                  <img src="assets/img/about-3.jpg" alt="Thumbnail">
                 </div>
-                <h3 class="health-gallery__title">Masta <br> Misconeriya</h3>
               </div>
             </div>
           </div>
 
-          <div class="cf_image health-gallery__leaf">
-            <img src="../assets/imgs/health/leaf-5.png" alt="Leaf Image" data-speed="0.8">
-          </div>
+          
+          
         </section>
         <!-- Gallery section end -->
 
 
-        <!-- Brand section start -->
-        <div class="health-partner__area mbm-1">
-          <div class="health-container">
-            <div class="swiper brand_logo_slider" data-autoPlay="true" data-sliderSpeed="6000">
-              <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                  <div class="brand__logo">
-                    <img src="../assets/imgs/athletic/br-01.png" alt="Brand Logo" class="show-dark">
-                    <img src="../assets/imgs/athletic/br-01-dark.png" alt="Brand Logo" class="show-light">
-                  </div>
-                </div>
-                <div class="swiper-slide">
-                  <div class="brand__logo">
-                    <img src="../assets/imgs/athletic/br-02.png" alt="Brand Logo" class="show-dark">
-                    <img src="../assets/imgs/athletic/br-02-dark.png" alt="Brand Logo" class="show-light">
-                  </div>
-                </div>
-                <div class="swiper-slide">
-                  <div class="brand__logo">
-                    <img src="../assets/imgs/athletic/br-03.png" alt="Brand Logo" class="show-dark">
-                    <img src="../assets/imgs/athletic/br-03-dark.png" alt="Brand Logo" class="show-light">
-                  </div>
-                </div>
-                <div class="swiper-slide">
-                  <div class="brand__logo">
-                    <img src="../assets/imgs/athletic/br-04.png" alt="Brand Logo" class="show-dark">
-                    <img src="../assets/imgs/athletic/br-05-dark.png" alt="Brand Logo" class="show-light">
-                  </div>
-                </div>
-                <div class="swiper-slide">
-                  <div class="brand__logo">
-                    <img src="../assets/imgs/athletic/br-05.png" alt="Brand Logo" class="show-dark">
-                    <img src="../assets/imgs/athletic/br-05-dark.png" alt="Brand Logo" class="show-light">
-                  </div>
-                </div>
-                <div class="swiper-slide">
-                  <div class="brand__logo">
-                    <img src="../assets/imgs/athletic/br-07.png" alt="Brand Logo" class="show-dark">
-                    <img src="../assets/imgs/athletic/br-07-dark.png" alt="Brand Logo" class="show-light">
-                  </div>
-                </div>
-                <div class="swiper-slide">
-                  <div class="brand__logo">
-                    <img src="../assets/imgs/athletic/br-06.png" alt="Brand Logo" class="show-dark">
-                    <img src="../assets/imgs/athletic/br-07-dark.png" alt="Brand Logo" class="show-light">
-                  </div>
-                </div>
-                <div class="swiper-slide">
-                  <div class="brand__logo">
-                    <img src="../assets/imgs/athletic/br-04.png" alt="Brand Logo" class="show-dark">
-                    <img src="../assets/imgs/athletic/br-05-dark.png" alt="Brand Logo" class="show-light">
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- Brand section end -->
+   
 
 
         <!-- Instagram section start -->
@@ -604,7 +553,7 @@
 
         <div class="health-footer__btm">
           <div class="health-container">
-            <p>© Alrights reserved by <a target="_blank" href="https://crowdyflow.com/">CrowdyFlow</a></p>
+            <p>© Alrights reserved by <a target="_blank" href="#">Aswathi</a></p>
           </div>
         </div>
 
