--- a/index.html
+++ b/index.html
@@ -832,7 +832,7 @@
 
         <div class="health-footer__btm">
           <div class="health-container">
-            <p>© Alrights reserved by <a target="_blank" href="https://crowdyflow.com/">CrowdyFlow</a></p>
+            <p>© Alrights reserved by <a target="_blank" href="#">Aswathi</a></p>
           </div>
         </div>
 
